[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["LadaKuzmina <92179198+LadaKuzmina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.10.1"
pylint = "^3.0.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
